# ELROWTP

./: .gitignore  Doxyfile  README.md  annotated.html  classes.html  classreceiver-members.html  classreceiver.html  classsender-members.html  classsender.html  classtracker-members.html  classtracker.html  files.html  functions.html  functions_func.html  index.html  struct_bound-members.html  struct_bound.html  struct_key_point_color-members.html  struct_key_point_color.html  tracker_8hpp_source.html
Assets/: Untitled.unity
Demo/: hksfhjrghjg.txt
MiniGame2/: annotated.html  annotated.js  audio_behavior_8cs.html  classaudio_behavior-members.html  classaudio_behavior.html  classaudio_behavior.js  classcustomer_table_script-members.html  classcustomer_table_script.html  classcustomer_table_script.js  classes.html  classhud_handler-members.html  classhud_handler.html  classhud_handler.js  classkitchen_script-members.html  classkitchen_script.html  classkitchen_script.js  classtimer_test-members.html  classtimer_test.html  classtip_counter-members.html  classtip_counter.html  classtip_counter.js  classtray_script-members.html  classtray_script.html  classtray_script.js  customer_table_script_8cs.html  dir_43bf59ebd6668616fc3917fe81416a1b.html  dir_43bf59ebd6668616fc3917fe81416a1b.js  dir_638303950b2ba2bbcb19848805a7e6fd.html  dir_638303950b2ba2bbcb19848805a7e6fd.js  dir_726670c5bd1435cce977f18be0850e41.html  dir_726670c5bd1435cce977f18be0850e41.js  dir_8b5272866d215123f66b7cf780bed8bc.html  dir_8b5272866d215123f66b7cf780bed8bc.js  dir_8ceffd4ee35c3518d4e8bdc7e638efe8.html  dir_8ceffd4ee35c3518d4e8bdc7e638efe8.js  dir_afa626cb88fe55daabfdce37966ae9cc.html  dir_afa626cb88fe55daabfdce37966ae9cc.js  dir_b9feccae93552872ea1c63a85ba55ec9.html  dir_b9feccae93552872ea1c63a85ba55ec9.js  dir_bf4e1d7e8661439f23ac268aa5387b81.html  (+19 more)
Minigame1/: annotated.html  annotated.js  class_coin_collection-members.html  class_coin_collection.html  class_coin_collection.js  class_coin_locator-members.html  class_coin_locator.html  class_coin_locator.js  class_level-members.html  class_level.html  class_level.js  class_level_generator-members.html  class_level_generator.html  class_level_generator.js  class_rotate_coin-members.html  class_rotate_coin.html  class_rotate_coin.js  class_score_timer-members.html  class_score_timer.html  class_score_timer.js  classcreate_level-members.html  classcreate_level.html  classcreate_level.js  classes.html  classgame_menu-members.html  classgame_menu.html  classgame_menu.js  classmini_game1_menu-members.html  classmini_game1_menu.html  classmini_game1_menu.js  dir_39481dfabe132e5cfe9c96e9e260f9fa.html  dir_41c1ba1c5109b2e194aac80925c9ef0b.html  dir_426241b5b1c5f2d420c28648faa24169.html  dir_42e7423630dfa8b20e2e1c2e7c8b37ef.html  dir_4fc86813baf288f842c1d3fb1d09fbed.html  dir_f053c19086c2a8032d4de9c516bc93c7.html  functions.html  functions_func.html  hierarchy.html  hierarchy.js  (+3 more)
Movement Detection/: ConsoleApplication1.sln
Object Tracker/: test1.sln
PositionServer/: CMakeLists.txt
PositionServer/src/: client.cpp  main.cpp  tracker.cpp  tracker.hpp
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
Prototype QR Detector/: README.txt
QCAR/: somedata16
docs/: AR Camera-unity.md  Building for Android-unity.md  Lightsource product.md  positioning-unity.md
launcher/: _q_c_a_r_unity_player_8h_source.html  _vuforia_render_delegate_8h_source.html  annotated.html  annotated.js  class_assets_1_1_scripts_1_1_game-members.html  class_assets_1_1_scripts_1_1_game.html  class_assets_1_1_scripts_1_1_game.js  class_assets_1_1_scripts_1_1_game_manager-members.html  class_assets_1_1_scripts_1_1_game_manager.html  class_assets_1_1_scripts_1_1_game_manager.js  class_assets_1_1_scripts_1_1_helpers_1_1_resource_helper-members.html  class_assets_1_1_scripts_1_1_helpers_1_1_resource_helper.html  (+773 more)
search/: all_0.js  (+11 more)
(+522 files in other folders)
